[package]
name = "crispr_temperature_calculator"
version = "0.1.1"
edition = "2021"
description = "A package for calculating the temperature of a from celsius to fahrenheit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }